# mlflow-demo

./: .gitignore  README.md  docker-compose.yml  invoke.yaml  mlflow-demo.code-workspace  poetry.toml  pyproject.toml  tasks.py
diagrams/: registry.excalidraw  tracking.excalidraw
src/mldemo/: registry.py  tracking.py
